Add styles for mixins and variables

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,56 @@
 @import 'variables';
+
+.heading-one {
+    font-family: @roboto;
+    font-size: 30px;
+    color: @dark-gray;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.lowercase-heading {
+    font-family: @roboto;
+    font-size: 30px;
+    color: @dark-gray;
+    font-weight: 500;
+}
+
+.heading-span {
+    font-family: @roboto;
+    font-size: 30px;
+    color: @red;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.para-text {
+    font-family: @roboto;
+    font-size: 16px;
+    color: @red;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.links {
+    font-family: @roboto;
+    font-size: 18px;
+    color: @dark-gray;
+    font-weight: 500;
+}
+
+.uppercase-links {
+    font-family: @roboto;
+    font-size: 18px;
+    color: @dark-gray;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.buttons {
+    font-family: @roboto;
+    font-size: 18px;
+    color: @dark-gray;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-radius: 8px;
+}
