--- a/less/main.less
+++ b/less/main.less
@@ -1,6 +1,34 @@
 @import 'variables';
 @import 'mixins';
 
+header {
+    background-color: @yellow;
+    nav {
+        height: 100px;
+        display:flex;
+        align-items: center;
+        ul li {
+            display: inline;
+            padding-right: 60px;
+        }
+    }
+    .header-content {
+        display:flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 20vh;
+    }
+    img {
+        width: 300px;
+        align-self: center;
+    }
+    button {
+        align-self: center;
+        .buttons();
+    }
+    
+}
+
 .jumbotron {
     background: url(../img/banner-bg.png);
 }
