--- a/less/mixins.less
+++ b/less/mixins.less
@@ -53,4 +53,6 @@
     font-weight: 500;
     text-transform: uppercase;
     border-radius: 8px;
+    padding: 5px 15px;
+    background-color: @yellow;
 }
