--- a/less/main.less
+++ b/less/main.less
@@ -44,6 +44,9 @@ header {
 main {
     article {
         padding:50px 0;
+        &:last-child {
+            background-color: @light-gray;
+        }
     }
 
     button {
