align main images in center of div

--- a/less/main.less
+++ b/less/main.less
@@ -39,6 +39,7 @@ header {
 
 .jumbotron {
     background: url(../img/banner-bg.png);
+    margin-bottom: 0;
 }
 
 main {
@@ -46,6 +47,12 @@ main {
         padding:50px 0;
         &:last-child {
             background-color: @light-gray;
+        }
+        img {
+            text-align: center;
+        }
+        .img-center {
+            text-align: center;
         }
     }
 
