Add heading styles

--- a/less/main.less
+++ b/less/main.less
@@ -54,6 +54,12 @@ main {
         .img-center {
             text-align: center;
         }
+        h2 {
+            .heading-one();
+            span {
+                .heading-one-red();
+            }
+        }
     }
 
     button {
