--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,6 +8,10 @@
     text-transform: uppercase;
 }
 
+.heading-one-red {
+    color:@red;
+}
+
 .lowercase-heading {
     font-family: @roboto;
     font-size: 30px;
