--- a/less/main.less
+++ b/less/main.less
@@ -60,9 +60,22 @@ main {
                 .heading-one-red();
             }
         }
+        p {
+            .para-text();
+        }
     }
 
     button {
         .buttons();
+    }
+}
+
+footer {
+    background-color: @dark-gray;
+    padding:30px 0;
+    text-align: center;
+    border-top: 10px solid @yellow;
+    img {
+        width: 250px;
     }
 }
