--- a/less/mixins.less
+++ b/less/mixins.less
@@ -30,9 +30,8 @@
 .para-text {
     font-family: @roboto;
     font-size: 16px;
-    color: @red;
+    color: @dark-gray;
     font-weight: 400;
-    text-transform: uppercase;
 }
 
 .links {
