--- a/less/main.less
+++ b/less/main.less
@@ -8,10 +8,13 @@ header {
         display:flex;
         align-items: center;
         ul {
-            
+            padding:0;
             li {
                 display: inline;
-                padding-right: 60px;
+                padding-right: 10px;
+                @media (min-width: @phone) {
+                    padding-right: 40px;
+                }
                 &:last-child {
                     .uppercase-links();
                     font-size: 16px;
