--- a/less/main.less
+++ b/less/main.less
@@ -32,17 +32,32 @@ header {
     img {
         width: 300px;
         align-self: center;
+        z-index: 1;
     }
     button {
         align-self: center;
         .buttons();
+        z-index: 1;
+    }
+
+    .overlay {
+        background: #3B3838;
+        width: 100%;
+        height: 100%;
+        opacity: .5;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .jumbotron {
+        background: url(../img/banner-bg.png);
+        background-position: center;
+        background-size: 100%;
+        margin-bottom: 0;
+        position: relative;
     }
     
-}
-
-.jumbotron {
-    background: url(../img/banner-bg.png);
-    margin-bottom: 0;
 }
 
 main {
