--- a/less/main.less
+++ b/less/main.less
@@ -53,7 +53,7 @@ header {
     .jumbotron {
         background: url(../img/banner-bg.png);
         background-position: center;
-        background-size: 100%;
+        background-size: cover;
         margin-bottom: 0;
         position: relative;
     }
